apollo-federation/src/connectors/snapshots/apollo_federation__connectors__string_template__test_parse__mixed_constant_and_expression.snap
---
source: apollo-federation/src/connectors/string_template.rs
expression: "StringTemplate::parse_with_spec(\"text{$config.one}text\",\nConnectSpec::latest()).unwrap()"
---
StringTemplate {
    parts: [
        Constant(
            Constant {
                value: "text",
                location: 0..4,
            },
        ),
        Expression(
            Expression {
                expression: JSONSelection {
                    inner: Value(
                        WithRange {
                            node: Path(
                                PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $config,
                                                range: Some(
                                                    0..7,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "one",
                                                        ),
                                                        range: Some(
                                                            8..11,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            11..11,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    7..11,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            0..11,
                                        ),
                                    },
                                },
                            ),
                            range: Some(
                                0..11,
                            ),
                        },
                    ),
                    spec: V0_4,
                },
                location: 5..16,
            },
        ),
        Constant(
            Constant {
                value: "text",
                location: 17..21,
            },
        ),
    ],
}
