apollo-federation/src/connectors/snapshots/apollo_federation__connectors__string_template__test_parse__simple_constant.snap
---
source: apollo-federation/src/connectors/string_template.rs
expression: template
---
StringTemplate {
    parts: [
        Constant(
            Constant {
                value: "text",
                location: 0..4,
            },
        ),
    ],
}
